--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+:root{
+  --middle-blue-green: #84DCC6;
+  --mint-cream: #F4FFFA;
+  --vivid-tangerine: #FFA69E;
+  --aquamarine: #A5FFD6;
+  --light-pink: #FFB4B5;
+  --jet: #2d2925;
+  --bittersweet: #FF686B;
+
+}
 * {
   margin: 0;
   padding: 0;
@@ -7,12 +17,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--mint-cream);
 }
 
 header {
   display: flex;
   height: 90px;
-  background-color: #373d58;
+  background-color: var(--middle-blue-green);
   align-items: center;
   box-shadow: #00000084 0px 1px 40px;
 }
@@ -25,6 +36,7 @@ header span {
 
 .coins {
   margin-top: 110px;
+  color: var(--jet);
 }
 
 .coins div {
@@ -36,7 +48,7 @@ header span {
   height: 58px;
   width: 250px;
   border-radius: 5px;
-  background-color: #8b95b3;
+  background-color: var(--vivid-tangerine);
 }
 
 .coins div:nth-child(1) {
@@ -53,14 +65,14 @@ header span {
   width: 30%;
   border: none;
   outline: none;
-  background-color: #8b95b3;
+  background-color: inherit;
   font-family: Playfair Display;
   font-size: 1.4em;
   font-weight: 800;
 }
 
 .coins option{
-  background-color: #cdcbcb;
+  background-color: inherit;
 }
 
 .coins hr {
@@ -77,7 +89,7 @@ header span {
   font-size: 24px;
   font-weight: 800;
 
-  background-color: #8b95b3;
+  background-color: initial;
   border: none;
   outline: none;
 
@@ -89,48 +101,24 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.invert-coins {
-  display: flex;
-  justify-content: center;
-  margin-top: 37px;
-}
-
-.invert-coins button {
-  height: 68px;
-  width: 128px;
-  border-radius: 5px;
-  background-color: #5f5b58;
-}
-.invert-coins i {
-  width: 70%;
-  font-size: 30px;
-}
-
-.invert-coins > button i:nth-child(1) {
-  margin-right: 30%;
-}
-
-.invert-coins > button i:nth-child(2) {
-  margin-left: 30%;
-}
-
 .info-coins {
   display: flex;
   margin-top: 100px;
   justify-content: center;
   font-family: "Roboto", sans-serif;
+  color: var(--jet);
 }
 
 .info-coins > div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #cdcbcb;
+  background-color: var(--aquamarine);
   height: 50vh;
   width: 90%;
   border-radius: 10px;
   border: solid 1px;
-  box-shadow: rgba(0, 0, 0, 0.151) 10px 10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.32) 10px 10px 20px;
 }
 
 .info-coins > div > span {
@@ -153,7 +141,7 @@ input::-webkit-inner-spin-button {
   align-items: center;
   width: 30%;
   height: 60px;
-  background-color: #7d7878;
+  background-color: var(--light-pink);
   font-size: 1.2em;
   padding-left: 20px;
   border-radius: 8px;
@@ -164,7 +152,7 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   width: 80%;
   height: 40%;
-  background-color: #2d2925;
+  background-color: var(--jet);
   font-size: 1.5em;
   border-radius: 5px;
 }
