--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,10 @@ header span {
 }
 
 .coins {
+  display: flex;
   margin-top: 110px;
   color: var(--jet);
+  justify-content: space-around;
 }
 
 .coins div {
@@ -46,23 +48,13 @@ header span {
   box-sizing: border-box;
   justify-content: center;
   height: 58px;
-  width: 250px;
+  width: 300px;
   border-radius: 5px;
   background-color: var(--vivid-tangerine);
 }
 
-.coins div:nth-child(1) {
-  float: left;
-  margin-left: 5%;
-}
-
-.coins div:nth-child(2) {
-  float: right;
-  margin-right: 5%;
-}
-
 .coins select {
-  width: 30%;
+  width: 70%;
   border: none;
   outline: none;
   background-color: inherit;
@@ -115,7 +107,7 @@ input::-webkit-inner-spin-button {
   align-items: center;
   background-color: var(--aquamarine);
   height: 50vh;
-  width: 90%;
+  width: 65%;
   border-radius: 10px;
   border: solid 1px;
   box-shadow: rgba(0, 0, 0, 0.32) 10px 10px 20px;
@@ -162,3 +154,39 @@ input::-webkit-inner-spin-button {
   color: #fff;
 }
 
+@media (max-width:675px) {
+
+  header span {
+    font-size: 10vw;
+  }
+
+  .coins {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .coins div {
+    margin: 20px;
+  }
+
+  .info-coins > div > span {
+    margin-bottom:30px;
+  }
+
+  .info-coins > div {
+    height: 48.7vh;
+    width: 100%;
+    border-radius: unset;
+    border-top: solid 1px;
+  }
+
+  .info-coins > div > div div {
+    width: 40%;
+    height: 80px;
+    overflow: hidden;
+  }
+
+  .info-coins > div > div:nth-child(3) {
+    height: 50%;
+  }
+}
