--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ header {
   align-items: center;
   box-shadow: #00000084 0px 1px 40px;
 }
-header span {
+header h1 {
   font-size: 3em;
   font-family: "Playfair Display", serif;
   margin: 20px;
@@ -115,7 +115,7 @@ input::-webkit-inner-spin-button {
   box-shadow: rgba(0, 0, 0, 0.32) 10px 10px 20px;
 }
 
-.info-coins > div > span {
+.info-coins > div > h1 {
   align-self: flex-start;
   margin: 30px 30px 60px 30px;
   font-size: 2em;
@@ -158,7 +158,7 @@ input::-webkit-inner-spin-button {
 
 @media (max-width:675px) {
 
-  header span {
+  header h1 {
     font-size: 10vw;
   }
 
@@ -172,7 +172,7 @@ input::-webkit-inner-spin-button {
     margin-bottom: 5vh;
   }
 
-  .info-coins > div > span {
+  .info-coins > div > h1 {
     margin-bottom:3.5vh;
   }
 
