--- a/src/styles/main/App.css
+++ b/src/styles/main/App.css
@@ -1,6 +1,7 @@
 :root{
   --middle-blue-green: #84DCC6;
   --mint-cream: #F4FFFA;
+  --black-background: #343434;
   --vivid-tangerine: #FFA69E;
   --aquamarine: #A5FFD6;
   --light-pink: #FFB4B5;
